@@ -2,6 +2,7 @@ package tools;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 
 import java.net.URLConnection;
@@ -18,9 +19,10 @@ public class NetLoockup {
     public static String NETWORK_ERROR_MESSAGE2 = "Failed to connect to";
     public static String NETWORK_STATUS = "Network-status";
     public static boolean NETWORK_STATUS_DEFAULT = false;
-     public static boolean NETWORK_STATUS_ON = true;
+    public static boolean NETWORK_STATUS_ON = true;
     public static String NETWORK_RESET_ERROR_MESSAGE = "recvfrom failed: ECONNRESET (Connection reset by peer)";
     Preferences pref;
+
     public NetLoockup() {
         pref = Preferences.userNodeForPackage(SyncEngine.class);
         ScheduledExecutorService ses = Executors.newSingleThreadScheduledExecutor();
@@ -28,17 +30,20 @@ public class NetLoockup {
             @Override
             public void run() {
                 try {
-                    URL url = new URL("https://www.google.com");
+                    URL url = URI.create("https://www.google.com").toURL();
                     URLConnection connection = url.openConnection();
                     connection.connect();
                     pref.putBoolean(NETWORK_STATUS, true);
+                     NETWORK_STATUS_ON = true;
                     notifyNetwork(true);
                 } catch (MalformedURLException e) {
                     pref.putBoolean(NETWORK_STATUS, NETWORK_STATUS_DEFAULT);
                     notifyNetwork(false);
+                    NETWORK_STATUS_ON = false;
                 } catch (IOException e) {
                     pref.putBoolean(NETWORK_STATUS, NETWORK_STATUS_DEFAULT);
                     notifyNetwork(false);
+                    NETWORK_STATUS_ON = false;
                 }
             }
         }, 3, 8, TimeUnit.SECONDS);
